新增輪播，movie待修

--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,8 @@
 body {
-  background: #fff;
+  /* background: #000;  */
   /* background-color: #6c757d; */
-  color: #666666;
+
+  color: #000;
   font-family: "Open Sans", sans-serif;
 }
 
