--- a/css/style.css
+++ b/css/style.css
@@ -870,10 +870,8 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 #topBtn {
-  /* position: fixed; */
-  /* right: 100px;
-  bottom: 100px; */
-  font-size: 50px;
+  font-size: 25px;
+  z-index: 999;
 }
 
 img:hover {
